[package]
name = "ruth"
version = "0.0.1"
description = "A set of command line tools for Ethereum developers"
authors = ["Franco Victorio <victorio.franco@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "ethereum", "blockchain"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
structopt = "0.3.20"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
