[package]
name = "ruth"
version = "0.0.1"
description = "A set of command line tools for Ethereum developers"
authors = ["Franco Victorio <victorio.franco@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "ethereum", "blockchain"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
structopt = "0.3.20"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3.8"
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0.59"
assert_cmd = "1.0.2"
predicates = "1.0.5"
anyhow = "1.0.34"
